--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
     class="absolute inset-0 w-full h-full object-cover"
   >
     <source
-      src="https://cdn.discordapp.com/attachments/1397639195442548816/1467331971171614780/cleaning-hero.mp4?ex=698544e3&is=6983f363&hm=6a0fa46b9e029a67857f6d0b4c5a13c3fdc8f813978280b8c8b003277a647217&"
+      src="https://www.goldengrovecleaning.com/images/cleaning-hero%20(1).mp4"
       type="video/mp4"
     />
   </video>
@@ -741,7 +741,7 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
             <div class="front-content">
               <div class="absolute inset-0">
                 <img 
-                  src="https://i.ibb.co/SDDYxzgB/20260202-1232-Image-Generation-remix-01kgfszst8ej3vzc39qaq7wrrd-1.png" 
+                  src="https://www.goldengrovecleaning.com/images/House%20cleaning.JPG" 
                   alt="Clean modern living room" 
                   class="h-full w-full object-cover"
                 >
@@ -760,13 +760,13 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-back">
             <div class="back-content">
               <strong class="text-3xl font-bold">House Cleaning</strong>
+              <p class="text-base leading-relaxed opacity-90">
+                Professional house cleaning that leaves your home sparkling and fresh. Reliable, thorough, and tailored to your needs.
+              </p>
               <a href="https://www.goldengrovecleaning.com/services/house-cleaning" 
                  class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
                 Learn More
               </a>
-              <p class="text-base leading-relaxed opacity-90">
-                Professional house cleaning that leaves your home sparkling and fresh. Reliable, thorough, and tailored to your needs.
-              </p>
             </div>
           </div>
         </div>
@@ -779,7 +779,7 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
             <div class="front-content">
               <div class="absolute inset-0">
                 <img 
-                  src="https://i.ibb.co/xqRMCYg1/20260202-1259-Image-Generation-remix-01kgfvgvr1f9ws9jaj1qnv220r.png" 
+                  src="https://www.goldengrovecleaning.com/images/Deep%20cleaning.JPG" 
                   alt="Deep cleaning kitchen" 
                   class="h-full w-full object-cover"
                 >
@@ -798,13 +798,13 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-back">
             <div class="back-content">
               <strong class="text-3xl font-bold">Deep Cleaning</strong>
+              <p class="text-base leading-relaxed opacity-90">
+                Professional deep clean — removes tough dirt, allergens, grime & bacteria from every surface for a healthier space.
+              </p>
               <a href="https://www.goldengrovecleaning.com/services/deep-cleaning" 
                  class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
                 Learn More
               </a>
-              <p class="text-base leading-relaxed opacity-90">
-                Professional deep clean — removes tough dirt, allergens, grime & bacteria from every surface for a healthier space.
-              </p>
             </div>
           </div>
         </div>
@@ -816,7 +816,7 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-front">
             <div class="front-content">
               <div class="absolute inset-0">
-                <img src="https://images.unsplash.com/photo-1560518883-2e25a0e1a2d6?w=800&auto=format&fit=crop" alt="Empty clean apartment ready for move in" class="h-full w-full object-cover">
+                <img src="https://www.goldengrovecleaning.com/images/Move%20in%20move%20out.jpg">
               </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
               <small class="badge absolute top-4 left-4 z-10 bg-orange-500/90 text-white px-3 py-1 rounded-full text-sm font-semibold">Service</small>
@@ -831,13 +831,14 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-back">
             <div class="back-content">
               <strong class="text-3xl font-bold">Move In / Move Out</strong>
+
+              <p class="text-base leading-relaxed opacity-90">
+                Thorough cleaning for new or departing residents — perfect condition for move-in or final walkthrough.
+              </p>
               <a href="https://www.goldengrovecleaning.com/services/move-in-move-out" 
                  class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
                 Learn More
               </a>
-              <p class="text-base leading-relaxed opacity-90">
-                Thorough cleaning for new or departing residents — perfect condition for move-in or final walkthrough.
-              </p>
             </div>
           </div>
         </div>
@@ -849,7 +850,7 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-front">
             <div class="front-content">
               <div class="absolute inset-0">
-                <img src="https://images.unsplash.com/photo-1598928508446-7d1a19e5e8e2?w=800&auto=format&fit=crop" alt="Fresh stylish vacation rental" class="h-full w-full object-cover">
+                <img src="https://www.goldengrovecleaning.com/images/Airbnb.JPG" alt="Fresh stylish vacation rental" class="h-full w-full object-cover">
               </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
               <small class="badge absolute top-4 left-4 z-10 bg-orange-500/90 text-white px-3 py-1 rounded-full text-sm font-semibold">Service</small>
@@ -864,13 +865,13 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-back">
             <div class="back-content">
               <strong class="text-3xl font-bold">Airbnb / Vacation Rental</strong>
-              <a href="https://www.goldengrovecleaning.com/services/airbnb-turnover" 
-                 class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
-                Learn More
-              </a>
               <p class="text-base leading-relaxed opacity-90">
                 Quick, high-quality turnovers between guests — linens, restocking, spotless presentation every time.
               </p>
+              <a href="https://www.goldengrovecleaning.com/services/airbnb-turnover" 
+                 class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
+                Learn More
+              </a>              
             </div>
           </div>
         </div>
@@ -882,7 +883,7 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-front">
             <div class="front-content">
               <div class="absolute inset-0">
-                <img src="https://images.unsplash.com/photo-1497366811353-11d25c50e367?w=800&auto=format&fit=crop" alt="Clean modern office space" class="h-full w-full object-cover">
+                <img src="https://www.goldengrovecleaning.com/images/Commercial.jpg" alt="Clean modern office space" class="h-full w-full object-cover">
               </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
               <small class="badge absolute top-4 left-4 z-10 bg-orange-500/90 text-white px-3 py-1 rounded-full text-sm font-semibold">Service</small>
@@ -897,13 +898,13 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-back">
             <div class="back-content">
               <strong class="text-3xl font-bold">Commercial Janitorial</strong>
-              <a href="https://www.goldengrovecleaning.com/services/commercial-janitorial" 
-                 class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
-                Learn More
-              </a>
               <p class="text-base leading-relaxed opacity-90">
                 Professional office & business cleaning — nightly, weekly, or customized schedules for a productive environment.
               </p>
+              <a href="https://www.goldengrovecleaning.com/services/commercial-janitorial" 
+                 class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
+                Learn More
+              </a>              
             </div>
           </div>
         </div>
@@ -915,7 +916,7 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-front">
             <div class="front-content">
               <div class="absolute inset-0">
-                <img src="https://images.unsplash.com/photo-1581093450021-4a7360e9a6b5?w=800&auto=format&fit=crop" alt="Clean new construction site" class="h-full w-full object-cover">
+                <img src="https://www.goldengrovecleaning.com/images/post%20construction.JPG" alt="Clean new construction site" class="h-full w-full object-cover">
               </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
               <small class="badge absolute top-4 left-4 z-10 bg-orange-500/90 text-white px-3 py-1 rounded-full text-sm font-semibold">Service</small>
@@ -930,13 +931,13 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-back">
             <div class="back-content">
               <strong class="text-3xl font-bold">Post-Construction Cleaning</strong>
-              <a href="https://www.goldengrovecleaning.com/services/post-construction" 
-                 class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
-                Learn More
-              </a>
               <p class="text-base leading-relaxed opacity-90">
                 Remove dust, debris, stickers, and construction residue — make new builds or renovations ready for occupancy.
               </p>
+              <a href="https://www.goldengrovecleaning.com/services/post-construction" 
+                 class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
+                Learn More
+              </a>              
             </div>
           </div>
         </div>
@@ -948,7 +949,7 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-front">
             <div class="front-content">
               <div class="absolute inset-0">
-                <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800&auto=format&fit=crop" alt="Freshly cleaned carpet and sofa" class="h-full w-full object-cover">
+                <img src="https://www.goldengrovecleaning.com/images/Carpet.JPG" alt="Freshly cleaned carpet and sofa" class="h-full w-full object-cover">
               </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
               <small class="badge absolute top-4 left-4 z-10 bg-orange-500/90 text-white px-3 py-1 rounded-full text-sm font-semibold">Service</small>
@@ -963,13 +964,13 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-back">
             <div class="back-content">
               <strong class="text-3xl font-bold">Carpet & Upholstery</strong>
-              <a href="https://www.goldengrovecleaning.com/services/carpet-upholstery" 
-                 class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
-                Learn More
-              </a>
               <p class="text-base leading-relaxed opacity-90">
                 Deep steam extraction and stain removal for carpets, rugs, sofas, chairs — revive and extend fabric life.
               </p>
+                <a href="https://www.goldengrovecleaning.com/services/carpet-upholstery" 
+                 class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
+                Learn More
+              </a>        
             </div>
           </div>
         </div>
@@ -981,7 +982,7 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-front">
             <div class="front-content">
               <div class="absolute inset-0">
-                <img src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?w=800&auto=format&fit=crop" alt="Sparkling clean windows" class="h-full w-full object-cover">
+                <img src="https://www.goldengrovecleaning.com/images/window%20cleaning.JPG" alt="Sparkling clean windows" class="h-full w-full object-cover">
               </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
               <small class="badge absolute top-4 left-4 z-10 bg-orange-500/90 text-white px-3 py-1 rounded-full text-sm font-semibold">Service</small>
@@ -996,13 +997,14 @@ document.querySelectorAll('.mobile-accordion button').forEach(button => {
           <div class="flip-card-back">
             <div class="back-content">
               <strong class="text-3xl font-bold">Window Cleaning</strong>
-              <a href="https://www.goldengrovecleaning.com/services/window-cleaning" 
-                 class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
-                Learn More
-              </a>
+
               <p class="text-base leading-relaxed opacity-90">
                 Streak-free interior & exterior window cleaning — homes, offices, storefronts — maximum clarity and shine.
               </p>
+                <a href="https://www.goldengrovecleaning.com/services/window-cleaning" 
+                 class="learn-more-btn px-10 py-4 bg-[#ff9966] text-[#151515] font-bold rounded-full text-base shadow-md inline-block hover:bg-[#ffbb88]">
+                Learn More
+              </a>
             </div>
           </div>
         </div>
