--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!doctype html>1
 <html lang="en-US" prefix="og: https://ogp.me/ns#" class="no-js" itemscope itemtype="https://schema.org/WebPage">
 <head>
 
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">    
 
 <!-- ===================================================== -->
 <!--     100% EXTREME LOCAL SEO DOMINATION – MIDLAND TX     -->
