feat: SEO Optimization (Schema + WebP)

--- a/Home/index.html
+++ b/Home/index.html
@@ -258,7 +258,7 @@
     <div class="flex items-center justify-between h-20">
       <!-- Logo -->
       <a href="/Home/" class="flex items-center gap-3">
-        <img src="https://www.goldengrovecleaning.com/images/logo.jpeg"
+        <img src="https://www.goldengrovecleaning.com/images/logo.webp"
           alt="Golden Grove Cleaning - #1 Janitorial & House Cleaning Midland TX"
           class="h-10 sm:h-12 w-auto object-contain transition-transform hover:scale-105 duration-300">
       </a>
@@ -884,7 +884,7 @@
           <div class="flip-card-front">
             <div class="front-content">
               <div class="absolute inset-0">
-                <img src="https://www.goldengrovecleaning.com/images/Move%20in%20move%20out.jpg">
+                <img src="https://www.goldengrovecleaning.com/images/Move%20in%20move%20out.jpg" alt="Move%20In%20Move%20Out">
               </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
               <small
@@ -919,7 +919,7 @@
           <div class="flip-card-front">
             <div class="front-content">
               <div class="absolute inset-0">
-                <img src="https://www.goldengrovecleaning.com/images/Airbnb.JPG" alt="Fresh stylish vacation rental"
+                <img src="https://www.goldengrovecleaning.com/images/Airbnb.webp" alt="Fresh stylish vacation rental"
                   class="h-full w-full object-cover">
               </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
@@ -954,7 +954,7 @@
           <div class="flip-card-front">
             <div class="front-content">
               <div class="absolute inset-0">
-                <img src="https://www.goldengrovecleaning.com/images/Commercial.jpg" alt="Clean modern office space"
+                <img src="https://www.goldengrovecleaning.com/images/Commercial.webp" alt="Clean modern office space"
                   class="h-full w-full object-cover">
               </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
@@ -1026,7 +1026,7 @@
           <div class="flip-card-front">
             <div class="front-content">
               <div class="absolute inset-0">
-                <img src="https://www.goldengrovecleaning.com/images/Carpet.JPG" alt="Freshly cleaned carpet and sofa"
+                <img src="https://www.goldengrovecleaning.com/images/Carpet.webp" alt="Freshly cleaned carpet and sofa"
                   class="h-full w-full object-cover">
               </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
@@ -1837,7 +1837,7 @@
       <!-- Brand Column -->
       <div class="space-y-6">
         <a href="/Home/" class="inline-block group">
-          <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" 
+          <img src="https://www.goldengrovecleaning.com/images/logo.webp" 
                alt="Golden Grove Cleaning Logo"
                class="h-14 w-auto rounded-lg brightness-110 transition-transform duration-300 group-hover:scale-105">
         </a>
