--- a/andrews-tx-cleaning-services/index.html
+++ b/andrews-tx-cleaning-services/index.html
@@ -153,6 +153,36 @@
     </style>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.goldengrovecleaning.com/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Service Areas",
+      "item": "https://www.goldengrovecleaning.com/locations-midland-tx/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Andrews, TX",
+      "item": "https://www.goldengrovecleaning.com/andrews-tx-cleaning-services/"
+    }
+  ]
+}
+    </script>
 </head>
 
 <body class="bg-brand-sand text-gray-900 font-primary">
@@ -164,7 +194,7 @@
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <a href="/Home/" class="flex items-center gap-3">
-                    <img src="https://www.goldengrovecleaning.com/images/logo.jpeg"
+                    <img src="https://www.goldengrovecleaning.com/images/logo.webp"
                         alt="Golden Grove Cleaning - #1 Janitorial & House Cleaning Midland TX"
                         class="h-10 sm:h-12 w-auto object-contain transition-transform hover:scale-105 duration-300">
                 </a>
@@ -855,7 +885,7 @@
       <!-- Brand Column -->
       <div class="space-y-6">
         <a href="/Home/" class="inline-block group">
-          <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" 
+          <img src="https://www.goldengrovecleaning.com/images/logo.webp" 
                alt="Golden Grove Cleaning Logo"
                class="h-14 w-auto rounded-lg brightness-110 transition-transform duration-300 group-hover:scale-105">
         </a>
