--- a/blog-midland-tx/index.html
+++ b/blog-midland-tx/index.html
@@ -158,6 +158,30 @@
         }
     </style>
 
+
+    
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.goldengrovecleaning.com/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Blog",
+      "item": "https://www.goldengrovecleaning.com/blog-midland-tx/"
+    }
+  ]
+}
+    </script>
 </head>
 
 <body class="bg-brand-sand text-gray-900">
@@ -169,7 +193,7 @@
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <a href="/Home/" class="flex items-center gap-3">
-                    <img src="https://www.goldengrovecleaning.com/images/logo.jpeg"
+                    <img src="https://www.goldengrovecleaning.com/images/logo.webp"
                         alt="Golden Grove Cleaning - #1 Janitorial & House Cleaning Midland TX"
                         class="h-10 sm:h-12 w-auto object-contain transition-transform hover:scale-105 duration-300">
                 </a>
@@ -517,7 +541,7 @@
                     <!-- Placeholder Post 3 -->
                     <article class="blog-card group" data-aos="fade-up" data-aos-delay="300">
                         <div class="overflow-hidden rounded-2xl mb-8 shadow-premium">
-                            <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" alt="Golden Grove news"
+                            <img src="https://www.goldengrovecleaning.com/images/logo.webp" alt="Golden Grove news"
                                 class="blog-image w-full h-[280px] object-cover bg-brand-sand">
                         </div>
                         <div class="space-y-4">
@@ -645,7 +669,7 @@
                 <!-- Brand Column -->
                 <div class="space-y-6">
                     <a href="/Home/" class="inline-block group">
-                        <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" alt="Golden Grove Cleaning Logo"
+                        <img src="https://www.goldengrovecleaning.com/images/logo.webp" alt="Golden Grove Cleaning Logo"
                             class="h-14 w-auto rounded-lg brightness-110 transition-transform duration-300 group-hover:scale-105">
                     </a>
                     <p class="text-gray-400 text-base leading-relaxed">
