--- a/commercial-janitorial-midland-tx/index.html
+++ b/commercial-janitorial-midland-tx/index.html
@@ -154,6 +154,36 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.goldengrovecleaning.com/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Services",
+      "item": "https://www.goldengrovecleaning.com/Home/#services"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Commercial Cleaning",
+      "item": "https://www.goldengrovecleaning.com/commercial-janitorial-midland-tx/"
+    }
+  ]
+}
+    </script>
 </head>
 
 <body>
@@ -165,7 +195,7 @@
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <a href="/Home/" class="flex items-center gap-3">
-                    <img src="https://www.goldengrovecleaning.com/images/logo.jpeg"
+                    <img src="https://www.goldengrovecleaning.com/images/logo.webp"
                         alt="Golden Grove Cleaning - #1 Janitorial & House Cleaning Midland TX"
                         class="h-10 sm:h-12 w-auto object-contain transition-transform hover:scale-105 duration-300">
                 </a>
@@ -426,7 +456,7 @@
 
     <!-- HERO SECTION -->
     <section class="relative h-[65vh] min-h-[500px] overflow-hidden">
-        <img src="https://www.goldengrovecleaning.com/images/Commercial.jpg" alt="Commercial Janitorial Midland TX"
+        <img src="https://www.goldengrovecleaning.com/images/Commercial.webp" alt="Commercial Janitorial Midland TX"
             class="absolute inset-0 w-full h-full object-cover">
         <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/40 to-transparent"></div>
 
@@ -492,7 +522,7 @@
                 </div>
 
                 <div class="relative rounded-3xl overflow-hidden shadow-2xl" data-aos="fade-left">
-                    <img src="https://www.goldengrovecleaning.com/images/Commercial.jpg"
+                    <img src="https://www.goldengrovecleaning.com/images/Commercial.webp"
                         alt="Spotless commercial office space" class="w-full h-auto">
                     <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/60 p-8 text-white">
                         <p class="text-2xl font-bold">"Exceptional reliability and attention to detail."</p>
@@ -907,7 +937,7 @@
                 <!-- Brand Column -->
                 <div class="space-y-6">
                     <a href="/Home/" class="inline-block group">
-                        <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" alt="Golden Grove Cleaning Logo"
+                        <img src="https://www.goldengrovecleaning.com/images/logo.webp" alt="Golden Grove Cleaning Logo"
                             class="h-14 w-auto rounded-lg brightness-110 transition-transform duration-300 group-hover:scale-105">
                     </a>
                     <p class="text-gray-400 text-base leading-relaxed">
