--- a/about-midland-tx/index.html
+++ b/about-midland-tx/index.html
@@ -235,6 +235,30 @@
         }
     </style>
 
+
+    
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.goldengrovecleaning.com/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "About Us",
+      "item": "https://www.goldengrovecleaning.com/about-midland-tx/"
+    }
+  ]
+}
+    </script>
 </head>
 
 <body class="bg-brand-sand text-gray-900">
@@ -246,7 +270,7 @@
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <a href="/Home/" class="flex items-center gap-3">
-                    <img src="https://www.goldengrovecleaning.com/images/logo.jpeg"
+                    <img src="https://www.goldengrovecleaning.com/images/logo.webp"
                         alt="Golden Grove Cleaning - #1 Janitorial & House Cleaning Midland TX"
                         class="h-10 sm:h-12 w-auto object-contain transition-transform hover:scale-105 duration-300">
                 </a>
@@ -596,7 +620,7 @@
                         </div>
                         <div class="mt-10 pt-10 border-t border-gray-200">
                             <div class="flex items-center gap-6">
-                                <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" alt="Owner Seal"
+                                <img src="https://www.goldengrovecleaning.com/images/logo.webp" alt="Owner Seal"
                                     class="h-16 w-16 rounded-full object-contain bg-white p-2">
                                 <div>
                                     <h4 class="text-xl font-bold text-brand-green">The Golden Grove Family</h4>
@@ -1025,7 +1049,7 @@
                 <!-- Brand Column -->
                 <div class="space-y-6">
                     <a href="/Home/" class="inline-block group">
-                        <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" alt="Golden Grove Cleaning Logo"
+                        <img src="https://www.goldengrovecleaning.com/images/logo.webp" alt="Golden Grove Cleaning Logo"
                             class="h-14 w-auto rounded-lg brightness-110 transition-transform duration-300 group-hover:scale-105">
                     </a>
                     <p class="text-gray-400 text-base leading-relaxed">
