--- a/gallery-midland-tx/index.html
+++ b/gallery-midland-tx/index.html
@@ -161,6 +161,30 @@
         }
     </style>
 
+
+    
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.goldengrovecleaning.com/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Gallery",
+      "item": "https://www.goldengrovecleaning.com/gallery-midland-tx/"
+    }
+  ]
+}
+    </script>
 </head>
 
 <body class="bg-brand-sand text-gray-900">
@@ -172,7 +196,7 @@
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <a href="/Home/" class="flex items-center gap-3">
-                    <img src="https://www.goldengrovecleaning.com/images/logo.jpeg"
+                    <img src="https://www.goldengrovecleaning.com/images/logo.webp"
                         alt="Golden Grove Cleaning - #1 Janitorial & House Cleaning Midland TX"
                         class="h-10 sm:h-12 w-auto object-contain transition-transform hover:scale-105 duration-300">
                 </a>
@@ -605,7 +629,7 @@
                 <!-- Brand Column -->
                 <div class="space-y-6">
                     <a href="/Home/" class="inline-block group">
-                        <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" alt="Golden Grove Cleaning Logo"
+                        <img src="https://www.goldengrovecleaning.com/images/logo.webp" alt="Golden Grove Cleaning Logo"
                             class="h-14 w-auto rounded-lg brightness-110 transition-transform duration-300 group-hover:scale-105">
                     </a>
                     <p class="text-gray-400 text-base leading-relaxed">
