--- a/grassland-estates-tx-cleaning-services/index.html
+++ b/grassland-estates-tx-cleaning-services/index.html
@@ -152,6 +152,36 @@
     </style>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.goldengrovecleaning.com/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Service Areas",
+      "item": "https://www.goldengrovecleaning.com/locations-midland-tx/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Grassland Estates",
+      "item": "https://www.goldengrovecleaning.com/grassland-estates-tx-cleaning-services/"
+    }
+  ]
+}
+    </script>
 </head>
 
 <body class="bg-brand-sand text-gray-900 font-primary">
@@ -163,7 +193,7 @@
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <a href="/Home/" class="flex items-center gap-3">
-                    <img src="https://www.goldengrovecleaning.com/images/logo.jpeg"
+                    <img src="https://www.goldengrovecleaning.com/images/logo.webp"
                         alt="Golden Grove Cleaning - #1 Janitorial & House Cleaning Midland TX"
                         class="h-10 sm:h-12 w-auto object-contain transition-transform hover:scale-105 duration-300">
                 </a>
@@ -522,7 +552,7 @@
     <!-- FOOTER -->
     <footer class="bg-brand-green text-white py-24 text-center">
         <div class="max-w-7xl mx-auto px-5">
-            <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" alt="Logo"
+            <img src="https://www.goldengrovecleaning.com/images/logo.webp" alt="Logo"
                 class="h-16 w-auto rounded-xl mx-auto mb-12 brightness-110">
             <p class="text-green-50/40 text-sm">&copy; 2024 Golden Grove Cleaning. Serving Grassland Estates with
                 Excellence.</p>
@@ -609,7 +639,7 @@
       <!-- Brand Column -->
       <div class="space-y-6">
         <a href="/Home/" class="inline-block group">
-          <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" 
+          <img src="https://www.goldengrovecleaning.com/images/logo.webp" 
                alt="Golden Grove Cleaning Logo"
                class="h-14 w-auto rounded-lg brightness-110 transition-transform duration-300 group-hover:scale-105">
         </a>
