--- a/move-out-cleaning-midland-tx/index.html
+++ b/move-out-cleaning-midland-tx/index.html
@@ -155,6 +155,36 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.goldengrovecleaning.com/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Services",
+      "item": "https://www.goldengrovecleaning.com/Home/#services"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Move-In / Move-Out",
+      "item": "https://www.goldengrovecleaning.com/move-out-cleaning-midland-tx/"
+    }
+  ]
+}
+    </script>
 </head>
 
 <body>
@@ -166,7 +196,7 @@
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <a href="/Home/" class="flex items-center gap-3">
-                    <img src="https://www.goldengrovecleaning.com/images/logo.jpeg"
+                    <img src="https://www.goldengrovecleaning.com/images/logo.webp"
                         alt="Golden Grove Cleaning - #1 Janitorial & House Cleaning Midland TX"
                         class="h-10 sm:h-12 w-auto object-contain transition-transform hover:scale-105 duration-300">
                 </a>
@@ -664,7 +694,7 @@
                 <!-- Brand Column -->
                 <div class="space-y-6">
                     <a href="/Home/" class="inline-block group">
-                        <img src="https://www.goldengrovecleaning.com/images/logo.jpeg" alt="Golden Grove Cleaning Logo"
+                        <img src="https://www.goldengrovecleaning.com/images/logo.webp" alt="Golden Grove Cleaning Logo"
                             class="h-14 w-auto rounded-lg brightness-110 transition-transform duration-300 group-hover:scale-105">
                     </a>
                     <p class="text-gray-400 text-base leading-relaxed">
